--- a/css/main.css
+++ b/css/main.css
@@ -44,10 +44,10 @@ table {
 
 /* END RESET */
 /* GRID AREA */
-.container {
+.containere {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 0.2fr 2.5fr 0.3fr;
+  grid-template-rows: 1em 2.5fr 0.3fr;
   grid-auto-columns: 1fr;
   gap: 0px 0px;
   grid-auto-flow: row;
@@ -253,3 +253,55 @@ h1 {
   line-height: 1;
   text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.8);
   margin-bottom: 139px; }
+
+/* platilla grid */
+.grid-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #03afff;
+  border-radius: 4px;
+  transition: transform 0.3s ease-in-out;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat; }
+  .grid-item:hover {
+    filter: opacity(0.9);
+    transform: scale(1.04); }
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-auto-rows: minmax(200px, auto);
+  gap: 20px;
+  padding: 20px;
+  grid-auto-flow: dense; }
+
+@media (min-width: 600px) {
+  .wide {
+    grid-column: span 2; }
+  .tall {
+    grid-row: span 2; } }
+
+.img-fluid {
+  width: 30em;
+  height: 15em; }
+
+.card {
+  padding: 10px;
+  border: 1px solid black;
+  width: 30em;
+  display: inline-block; }
+
+.card-body {
+  display: inline; }
+
+.card-title {
+  font-family: "Roboto", sans-serif;
+  color: #ffffff;
+  font-size: 3em;
+  font-weight: 400;
+  line-height: 1;
+  text-shadow: 2px 2px 3px black;
+  padding-bottom: 3px;
+  margin: 0; }
